# example_flutter_open62541

./: README.md
server/: clone-and-build-qtopcua.sh  make-and-run-waterpump-server.sh  simulationserver.cpp.patch  simulationserver.h.patch
waterpump_ffi_plugin/: README.md  analysis_options.yaml  pubspec.yaml
waterpump_ffi_plugin/android/: CMakeLists.txt  build.gradle  settings.gradle
waterpump_ffi_plugin/android/src/main/: AndroidManifest.xml
waterpump_ffi_plugin/android/src/main/kotlin/com/example/waterpump_ffi_plugin/: WaterpumpFfiPlugin.kt
waterpump_ffi_plugin/example/: README.md  pubspec.yaml
waterpump_ffi_plugin/example/android/app/: build.gradle
waterpump_ffi_plugin/example/android/app/src/debug/: AndroidManifest.xml
waterpump_ffi_plugin/example/android/app/src/main/: AndroidManifest.xml
waterpump_ffi_plugin/example/android/app/src/main/kotlin/com/example/waterpump_ffi_plugin_example/: MainActivity.kt
waterpump_ffi_plugin/example/lib/: main.dart
waterpump_ffi_plugin/example/linux/: CMakeLists.txt  my_application.cc
waterpump_ffi_plugin/example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
waterpump_ffi_plugin/example/test/: widget_test.dart
waterpump_ffi_plugin/lib/: waterpump_ffi_plugin.dart
waterpump_ffi_plugin/linux/: CMakeLists.txt  waterpump_ffi_plugin.cc
waterpump_ffi_plugin/linux/include/waterpump_ffi_plugin/: waterpump_ffi_plugin.h
waterpump_ffi_plugin/native_code/: Makefile  open6254-CMakeLists.txt.patch  prepare-dependencies.sh  test.cpp  waterpump_ffi_lib.cpp  waterpump_ffi_lib.h
waterpump_ffi_plugin/test/: waterpump_ffi_plugin_test.dart
